--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
         <h2><a href='https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiIj5P98qHzAhWjmOAKHSDMD58QtwJ6BAgGEAM&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fvideos%2Fcomments%2F2js50i%2Frussian_soldier_performs_nohands_push_ups%2F&usg=AOvVaw37cUWLuVB1Xjz9Sx6taEPs'>Click me</a></h2>
     </header></div>  
     
+    <div class="blog"><header>
+        <h1 class="head"></h1>
+    </header></div>
+
+
 </body>
 </html>
