--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <body class="body">
         
         <div class='Header'><header>
-            <h1 class='Headchild'>Foods <br/>By Perry Zhang <br/></h1>
+            <h1 class='Headchild'>Foods <br/>By Perry Zhang <br/> <br/>(Hover over me!!)<br/></h1>
+            <h2 class="Animation">Showcasing...</h2>
         </header></div>
 
         <section class= 'Post'>
