--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     </head>
     <body class="body">
         
+        <div class="animation">Presenting</div>
+
         <div class='Header'><header>
-            <h1 class='Headchild'>Foods <br/>By Perry Zhang <br/></h1>
+            <h1 class='Headchild'>Foods <br/>By Perry Zhang <br/> </h1>
         </header></div>
 
         <section class= 'Post'>
